crates/kula-wasm/tests/snapshots/check__failure_envelope_duplicate_id.snap
---
source: crates/kula-wasm/tests/check.rs
expression: check_json(src)
---
{
  "diagnostics": [
    {
      "code": "KULA-R01",
      "severity": "error",
      "message": "id `alice` is already used by another person — pick a different id (every id must be unique across all persons and marriages)",
      "primary": {
        "byteStart": 47,
        "byteEnd": 52,
        "line": 2,
        "column": 8
      },
      "related": [
        {
          "label": "first declared here as a person",
          "byteStart": 7,
          "byteEnd": 12,
          "line": 1,
          "column": 8
        }
      ]
    }
  ]
}
