crates/kula-wasm/tests/snapshots/check__failure_envelope_missing_required_field.snap
---
source: crates/kula-wasm/tests/check.rs
expression: check_json(src)
---
{
  "diagnostics": [
    {
      "code": "KULA-R03",
      "severity": "error",
      "message": "person `alice` needs a `name:` field — add `name:\"…\"` to the declaration",
      "primary": {
        "byteStart": 7,
        "byteEnd": 12,
        "line": 1,
        "column": 8
      },
      "related": []
    }
  ]
}
