crates/kula-wasm/tests/snapshots/check__failure_envelope_unresolved_reference.snap
---
source: crates/kula-wasm/tests/check.rs
expression: check_json(src)
---
{
  "diagnostics": [
    {
      "code": "KULA-R02",
      "severity": "error",
      "message": "no person with id `ghost` is declared in this file — check for a typo, or add a `person ghost …` declaration",
      "primary": {
        "byteStart": 57,
        "byteEnd": 62,
        "line": 2,
        "column": 18
      },
      "related": []
    }
  ]
}
